feat: Add data import/export functionality
Introduces the ability to import and export financial data using XLSX files. This enhances user control and data management within ContaMiki.

Includes:
- XLSX library integration for handling spreadsheet files.
- New UI tab for import/export operations.
- Functionality to download a template for data import.
- Logic for parsing and importing data from XLSX.
- Icon generation for new categories based on keywords.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     "react-markdown": "https://esm.sh/react-markdown@^10.1.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
     "recharts": "https://esm.sh/recharts@^3.7.0",
+    "xlsx": "https://esm.sh/xlsx@0.18.5",
     "fs": "https://esm.sh/fs@^0.0.1-security",
     "url": "https://esm.sh/url@^0.11.4",
     "express": "https://esm.sh/express@^5.2.1",
