--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      body { font-family: 'Inter', sans-serif; }
+      body { font-family: 'Inter', sans-serif; background-color: #020617; }
       .custom-scrollbar::-webkit-scrollbar { width: 6px; }
       .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
       .custom-scrollbar::-webkit-scrollbar-thumb { background: #e2e8f0; border-radius: 10px; }
       .custom-scrollbar::-webkit-scrollbar-thumb:hover { background: #cbd5e1; }
+      #app-loader { transition: opacity 0.5s ease; }
     </style>
   <script type="importmap">
 {
@@ -36,8 +37,43 @@
 }
 </script>
 </head>
-  <body class="bg-slate-50 antialiased overflow-x-hidden">
-    <div id="root"></div>
+  <body class="antialiased overflow-x-hidden">
+    <div id="root">
+        <!-- Loader inicial para evitar pantalla en blanco -->
+        <div id="app-loader" class="fixed inset-0 flex flex-col items-center justify-center bg-slate-950 text-white z-[9999]">
+            <div class="w-16 h-16 border-4 border-indigo-600 border-t-transparent rounded-full animate-spin mb-8 shadow-2xl shadow-indigo-600/20"></div>
+            <h1 class="text-2xl font-black tracking-tighter mb-2">ContaMiki</h1>
+            <p id="loader-status" class="text-[10px] font-black uppercase tracking-[0.4em] text-slate-500 animate-pulse">Iniciando motor financiero...</p>
+            <noscript>
+                <p class="mt-4 text-rose-500 font-bold">Error: Esta aplicación requiere Javascript para funcionar.</p>
+            </noscript>
+        </div>
+    </div>
+
+    <!-- Script de diagnóstico -->
+    <script>
+      window.addEventListener('error', function(e) {
+        if (e.target && (e.target.src || e.target.href)) {
+           const status = document.getElementById('loader-status');
+           if (status) {
+             status.innerHTML = '<span class="text-rose-500">Error al cargar recursos. Revisa tu conexión.</span>';
+             status.classList.remove('animate-pulse');
+           }
+        }
+      }, true);
+      
+      // Eliminar el loader si el JS principal carga
+      window.addEventListener('DOMContentLoaded', () => {
+        setTimeout(() => {
+            const loader = document.getElementById('app-loader');
+            if (loader && !document.getElementById('root').innerHTML.includes('ContaMiki')) {
+                // Si tras 5 segundos sigue el loader y no hay contenido React, avisar.
+                console.warn("React mounting taking longer than expected...");
+            }
+        }, 5000);
+      });
+    </script>
+    
     <script type="module" src="/bundle.js"></script>
   </body>
 </html>
