feat: Improve application startup and Docker setup
Refactor the application entry point to correctly handle the loading state and hide the loader upon successful React rendering. This includes adding error handling for the mounting process.

Update the Docker configuration to use a production Node.js environment, leverage environment variables for API keys and secrets, and utilize named volumes for data persistence. The Dockerfile has been simplified to focus on production deployment.

Enhance the icon service by dynamically fetching the API key using authentication tokens and implementing a cache for improved performance. This change moves away from hardcoded API keys and prepares for secure configuration management.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      body { font-family: 'Inter', sans-serif; background-color: #020617; }
-      .custom-scrollbar::-webkit-scrollbar { width: 6px; }
-      .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
-      .custom-scrollbar::-webkit-scrollbar-thumb { background: #e2e8f0; border-radius: 10px; }
-      .custom-scrollbar::-webkit-scrollbar-thumb:hover { background: #cbd5e1; }
-      #app-loader { transition: opacity 0.5s ease; }
+      body { font-family: 'Inter', sans-serif; background-color: #020617; margin: 0; padding: 0; }
+      #app-loader { transition: opacity 0.5s ease; position: fixed; inset: 0; display: flex; flex-direction: column; align-items: center; justify-content: center; background-color: #020617; color: white; z-index: 9999; }
+      .loader-spin { width: 64px; height: 64px; border: 4px solid rgba(99, 102, 241, 0.1); border-top-color: #6366f1; border-radius: 50%; animation: spin 1s linear infinite; margin-bottom: 2rem; }
+      @keyframes spin { to { transform: rotate(360deg); } }
+      .tracking-widest-plus { letter-spacing: 0.4em; }
     </style>
   <script type="importmap">
 {
@@ -28,50 +27,45 @@
     "recharts": "https://esm.sh/recharts@^3.7.0",
     "xlsx": "https://esm.sh/xlsx@0.18.5",
     "fs": "https://esm.sh/fs@^0.0.1-security",
-    "url": "https://esm.sh/url@^0.11.4",
     "express": "https://esm.sh/express@^5.2.1",
-    "path": "https://esm.sh/path@^0.12.7",
     "bcryptjs": "https://esm.sh/bcryptjs@^3.0.3",
+    "url": "https://esm.sh/url@^0.11.4",
+    "path": "https://esm.sh/path@^0.12.7",
     "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3"
   }
 }
 </script>
 </head>
   <body class="antialiased overflow-x-hidden">
-    <div id="root">
-        <!-- Loader inicial para evitar pantalla en blanco -->
-        <div id="app-loader" class="fixed inset-0 flex flex-col items-center justify-center bg-slate-950 text-white z-[9999]">
-            <div class="w-16 h-16 border-4 border-indigo-600 border-t-transparent rounded-full animate-spin mb-8 shadow-2xl shadow-indigo-600/20"></div>
-            <h1 class="text-2xl font-black tracking-tighter mb-2">ContaMiki</h1>
-            <p id="loader-status" class="text-[10px] font-black uppercase tracking-[0.4em] text-slate-500 animate-pulse">Iniciando motor financiero...</p>
-            <noscript>
-                <p class="mt-4 text-rose-500 font-bold">Error: Esta aplicación requiere Javascript para funcionar.</p>
-            </noscript>
-        </div>
+    <div id="root"></div>
+
+    <div id="app-loader">
+        <div class="loader-spin"></div>
+        <h1 class="text-2xl font-black tracking-tighter mb-2">ContaMiki</h1>
+        <p id="loader-status" class="text-[10px] font-black uppercase tracking-widest-plus text-slate-500 animate-pulse">Iniciando motor financiero...</p>
     </div>
 
-    <!-- Script de diagnóstico -->
     <script>
+      // Capturador de errores globales antes de que cargue React
+      window.onerror = function(message, source, lineno, colno, error) {
+        const status = document.getElementById('loader-status');
+        if (status) {
+          status.innerHTML = '<span class="text-rose-500 font-bold">Error de ejecución: ' + message + '</span>';
+          status.classList.remove('animate-pulse');
+        }
+        return false;
+      };
+
+      // Fallback para errores de carga de script
       window.addEventListener('error', function(e) {
-        if (e.target && (e.target.src || e.target.href)) {
+        if (e.target && e.target.tagName === 'SCRIPT') {
            const status = document.getElementById('loader-status');
            if (status) {
-             status.innerHTML = '<span class="text-rose-500">Error al cargar recursos. Revisa tu conexión.</span>';
+             status.innerHTML = '<span class="text-rose-500 font-bold">Error al cargar bundle.js. ¿Has ejecutado el build?</span>';
              status.classList.remove('animate-pulse');
            }
         }
       }, true);
-      
-      // Eliminar el loader si el JS principal carga
-      window.addEventListener('DOMContentLoaded', () => {
-        setTimeout(() => {
-            const loader = document.getElementById('app-loader');
-            if (loader && !document.getElementById('root').innerHTML.includes('ContaMiki')) {
-                // Si tras 5 segundos sigue el loader y no hay contenido React, avisar.
-                console.warn("React mounting taking longer than expected...");
-            }
-        }, 5000);
-      });
     </script>
     
     <script type="module" src="/bundle.js"></script>
