--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://cdn-icons-png.flaticon.com/512/2910/2910296.png" />
+    <link rel="icon" type="image/png" href="https://images.icon-icons.com/1850/PNG/512/accounting_116483.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>ContaMiki | Finanzas Inteligentes</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -14,6 +13,11 @@
       .loader-spin { width: 64px; height: 64px; border: 4px solid rgba(99, 102, 241, 0.1); border-top-color: #6366f1; border-radius: 50%; animation: spin 1s linear infinite; margin-bottom: 2rem; }
       @keyframes spin { to { transform: rotate(360deg); } }
       .tracking-widest-plus { letter-spacing: 0.4em; }
+      /* Custom Scrollbar */
+      .custom-scrollbar::-webkit-scrollbar { width: 6px; }
+      .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
+      .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(99, 102, 241, 0.2); border-radius: 10px; }
+      .custom-scrollbar::-webkit-scrollbar-thumb:hover { background: rgba(99, 102, 241, 0.4); }
     </style>
   <script type="importmap">
 {
@@ -45,29 +49,6 @@
         <p id="loader-status" class="text-[10px] font-black uppercase tracking-widest-plus text-slate-500 animate-pulse">Iniciando motor financiero...</p>
     </div>
 
-    <script>
-      // Capturador de errores globales antes de que cargue React
-      window.onerror = function(message, source, lineno, colno, error) {
-        const status = document.getElementById('loader-status');
-        if (status) {
-          status.innerHTML = '<span class="text-rose-500 font-bold">Error de ejecución: ' + message + '</span>';
-          status.classList.remove('animate-pulse');
-        }
-        return false;
-      };
-
-      // Fallback para errores de carga de script
-      window.addEventListener('error', function(e) {
-        if (e.target && e.target.tagName === 'SCRIPT') {
-           const status = document.getElementById('loader-status');
-           if (status) {
-             status.innerHTML = '<span class="text-rose-500 font-bold">Error al cargar bundle.js. ¿Has ejecutado el build?</span>';
-             status.classList.remove('animate-pulse');
-           }
-        }
-      }, true);
-    </script>
-    
     <script type="module" src="/bundle.js"></script>
   </body>
 </html>
