refactor: Remove ledger-specific data and simplify types
The concept of "ledgers" has been removed from the application. This commit removes all ledger-related fields from interfaces and data service logic. The favicon has also been updated.

Changes include:
- Removed `ledgerId`, `ledgers`, `activeLedgerId` from `AppState` and related interfaces.
- Simplified default data in `dataService.ts` to no longer depend on ledgers.
- Updated the favicon URL in `index.html`.
- Removed unused imports and state management related to ledgers in `Layout.tsx`.
- Removed `ledgerId` from `Transaction` and `RecurrentMovement` types.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="https://images.icon-icons.com/1850/PNG/512/accounting_116483.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>ContaMiki | Finanzas Inteligentes</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
