--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body class="antialiased overflow-x-hidden">
     <div id="root"></div>
@@ -61,5 +62,6 @@
     </div>
 
     <script type="module" src="/bundle.js"></script>
-  </body>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
