--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     "path": "https://esm.sh/path@^0.12.7",
     "url": "https://esm.sh/url@^0.11.4",
     "bcryptjs": "https://esm.sh/bcryptjs@^3.0.3",
-    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3"
+    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3",
+    "crypto": "https://esm.sh/crypto@^1.0.1",
+    "nodemailer": "https://esm.sh/nodemailer@^8.0.1"
   }
 }
 </script>
