feat: Add two-factor authentication support
Implements two-factor authentication (2FA) using TOTP. This includes adding necessary dependencies, updating the login flow to handle 2FA verification, and introducing new API endpoints and UI components for setup and verification. Users can now enable and disable 2FA via their account settings.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
     "bcryptjs": "https://esm.sh/bcryptjs@^3.0.3",
     "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3",
     "crypto": "https://esm.sh/crypto@^1.0.1",
-    "nodemailer": "https://esm.sh/nodemailer@^8.0.1"
+    "nodemailer": "https://esm.sh/nodemailer@^8.0.1",
+    "speakeasy": "https://esm.sh/speakeasy@^2.0.0",
+    "qrcode": "https://esm.sh/qrcode@^1.5.4"
   }
 }
 </script>
