--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
     "lucide-react": "https://esm.sh/lucide-react@0.460.0",
     "recharts": "https://esm.sh/recharts@2.13.0",
     "xlsx": "https://esm.sh/xlsx@0.18.5",
+    "nodemailer": "https://esm.sh/nodemailer@^8.0.1",
+    "crypto": "https://esm.sh/crypto@^1.0.1",
+    "speakeasy": "https://esm.sh/speakeasy@^2.0.0",
+    "qrcode": "https://esm.sh/qrcode@^1.5.4",
     "express": "https://esm.sh/express@^5.2.1",
     "fs": "https://esm.sh/fs@^0.0.1-security",
     "path": "https://esm.sh/path@^0.12.7",
-    "url": "https://esm.sh/url@^0.11.4",
     "bcryptjs": "https://esm.sh/bcryptjs@^3.0.3",
-    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3",
-    "crypto": "https://esm.sh/crypto@^1.0.1",
-    "nodemailer": "https://esm.sh/nodemailer@^8.0.1",
-    "speakeasy": "https://esm.sh/speakeasy@^2.0.0",
-    "qrcode": "https://esm.sh/qrcode@^1.5.4"
+    "url": "https://esm.sh/url@^0.11.4",
+    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3"
   }
 }
 </script>
@@ -64,6 +64,6 @@
         <p id="loader-status" class="text-[10px] font-black uppercase tracking-widest-plus text-slate-500 animate-pulse">Iniciando motor financiero...</p>
     </div>
 
-    <script type="module" src="/bundle.js"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
