--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -38,18 +37,18 @@
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "@google/genai": "https://esm.sh/@google/genai@1.3.0",
     "react-markdown": "https://esm.sh/react-markdown@9.0.0",
-    "lucide-react": "https://esm.sh/lucide-react@0.460.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react,react-dom",
     "recharts": "https://esm.sh/recharts@2.13.0",
     "xlsx": "https://esm.sh/xlsx@0.18.5",
-    "nodemailer": "https://esm.sh/nodemailer@^8.0.1",
-    "crypto": "https://esm.sh/crypto@^1.0.1",
-    "speakeasy": "https://esm.sh/speakeasy@^2.0.0",
-    "qrcode": "https://esm.sh/qrcode@^1.5.4",
     "express": "https://esm.sh/express@^5.2.1",
     "fs": "https://esm.sh/fs@^0.0.1-security",
     "path": "https://esm.sh/path@^0.12.7",
-    "bcryptjs": "https://esm.sh/bcryptjs@^3.0.3",
     "url": "https://esm.sh/url@^0.11.4",
+    "bcryptjs": "https://esm.sh/bcryptjs@^3.0.3",
+    "crypto": "https://esm.sh/crypto@^1.0.1",
+    "nodemailer": "https://esm.sh/nodemailer@^8.0.1",
+    "qrcode": "https://esm.sh/qrcode@^1.5.4",
+    "speakeasy": "https://esm.sh/speakeasy@^2.0.0",
     "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3"
   }
 }
@@ -64,6 +63,7 @@
         <p id="loader-status" class="text-[10px] font-black uppercase tracking-widest-plus text-slate-500 animate-pulse">Iniciando motor financiero...</p>
     </div>
 
-    <script type="module" src="./index.tsx"></script>
+    <!-- En Docker y Producción, cargamos el bundle generado por esbuild -->
+    <script type="module" src="./bundle.js"></script>
   </body>
 </html>
